--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-react-starter",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "Get started with ES2015, React and Redux. Including Webpack, ESLint, react-router, fetch ...",
   "scripts": {
     "start": "webpack-dev-server --open --config webpack/webpack.config.dev.js",
@@ -38,6 +38,7 @@
     "babel-runtime": "^6.22.0",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
+    "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-babel": "^4.0.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
@@ -51,9 +52,9 @@
   "dependencies": {
     "lodash": "^4.17.4",
     "offline-plugin": "^4.5.5",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-redux": "^5.0.2",
+    "preact": "^7.1.0",
+    "preact-compat": "^3.13.0",
+    "preact-redux": "^2.0.0",
     "react-router-dom": "4.0.0-beta.3",
     "redux": "^3.5.2",
     "redux-thunk": "^2.2.0",
